3th-version/new-styles.css
/* ... */
  /* Summary */
  
  .summary {
    display: flex;
    justify-content: space-around;
    margin: 6rem 3rem 1.5rem 3rem;
  }
  
  .income,
  .outcome,
  .balance {
    /* width: 50%; */
    margin-bottom: 1.5rem;
    /* text-align: center; */
    width: 200px;
  }
  .outcome p {
    font-size: 2rem;
    color: #e61d32;
  }
  .income p {
    color: #009b72;
    font-size: 2rem;
  }
  
  .balance p {
    font-size: 2rem;
  }
  
  span {
    color: rgba(0, 0, 0, 0.5);
    font-size: 0.8rem;
    font-weight: 400;
  }
  
  @media (max-width: 1200px) {
    .income,
    .outcome,
    .balance {
      text-align: center;
    }
  }
  
  @media (max-width: 768px) {
    .summary {
      /* margin: 6rem 3rem 1.5rem 3rem;q */
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      width: 85%;
      
    }
  
    .income,
    .outcome,
    .balance {
      text-align: center;
      max-width: 400px;
      width: 100%;
      
    }
  }
  
  /* Search Tool */
  
  .history-container {
    display: grid;
    grid-template-columns: repeat(1, 1fr 1fr 1fr);
    column-gap: 2rem;    
  }
  
  #months{
    margin-right: 1rem;
  }
  
  .dateList {
    display: flex;
    margin-right: 2rem;
    position: relative;
    top: 0%;
    left: 0%;
    z-index: -2;
    /* transform: translate(-50%, -50%); */
  }
  
  .dateList select {
    background-color: #e1e9f4;
    color: 777777;
    padding: .2rem 0;
    width: 250px;
    font-size: 20px;
    border-radius: .5rem;
    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
    outline: none;
    border: none;
  }
  
  .history-container p {
    font-size: 1.4rem;
  }
  
  .search__container {
    display: flex;
    justify-content: right;
    margin: 0;
    width: 100%;
    padding: 0;
    z-index: -1;
  }
  
  .search__input {
    display: flex;
    justify-content: right;
    color: white;
    width: 90%;
    padding: 0.3rem 0 0.3rem 1rem;
    background-color: transparent;
    transition: transform 250ms ease-in-out;
    background-color: #244564;
    background-image: url(../Images/lupa.png);
    background-repeat: no-repeat;
    background-size: 18px 18px;
    background-position: 95% center;
    border-radius: 0.5rem;
    border: 1px solid transparent;
    transition: all 250ms ease-in-out;
    backface-visibility: hidden;
    transform-style: preserve-3d;
  }
  
  .search__input::placeholder {
    color: #339b9d;
    letter-spacing: 1.5px;
    padding-left: 0.5rem;
  }
  
  .search__input:hover,
  .search__input:focus {
    color: white;
    padding: 0.3rem 1rem;
    outline: 0;
    background-color: #25384f;
    border-bottom: 1px solid #339b9d;
    border-radius: 0;
    background-position: 98% center;
  }
  
  @media (max-width: 1200px) {
    .search__input {
      width: 50%;
        }
        /* .history-container {
          display: grid;
          grid-template-columns: repeat(1, 1fr 1fr 1fr);
          column-gap: 2rem;
          border: solid 1px black;
          
        } */
    .history-container {
      padding: .5rem;
      grid-template-columns: repeat(1, 1fr);
      grid-template-rows: repeat(2, 1fr);
      row-gap: 1rem;
    }
    .dateList {
      margin: 0;  
      display: flex;
      justify-content: space-around;
      /* transform: translate(-50%, -50%); */
    }
    #months, #years {
        width: 100%;
    }
      
  }
  
  @media (max-width: 840px) {
    .search__input {
      width: 100%;
    }
    
  }
  
  /*  Entries */
  
  .form-container {
    display: grid;
    /* grid-template-columns: repeat(2, 1fr); */
    grid-template-columns: repeat(1, 7fr 1fr);
    grid-template-rows: repeat(1, 1fr);
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
  }
  
  .inputTitle {
    font-size: 1.5rem;
  }
  /* 
  label {
    font-size: 12px;
    font-weight: 500;
    margin-bottom: 2px;
    display: block;
  } */
  
  .allInputs {
    border: none;
    text-align: center;
    background-color: #e1e9f4;
    box-sizing: border-box;
    width: 100%;
    padding: 10px 50px;
    font-size: 16px;
    font-weight: 600;
    color: #222;
    display: block;
  }
  
  
  .allInputs:focus {
    outline: none;
    background-color: lightblue;
  }
  
  .allInputs img {
    width: 0.6rem;
  }
  
  input,
  select,
  textarea {
    outline: none;
  }
  
  input::placeholder {
    font-size: 0.9rem;
    color: #777777;
  }
  
  #type {
    padding: 10px 30px;
    color: #777777;
  }

  .input-container {
    display: flex;
    flex-direction: row;
  }
  
  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
  }
  
  .button-container {
    display: flex;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
  }
  
  .submitBtn {
    width: 100%;
    font-weight: 600;
    text-transform: uppercase;
    padding: 0px 25px;
    color: #ffffff;
    background: #414c60;
    border: 0;
  }
  
  .submitBtn:hover,
  .submitBtn:focus {
    transition: 1s;
    background: #1e2430;
    cursor: pointer;
  }
  
  @media (max-width: 1200px) {
    .form-container {
      display: grid;
      grid-template-columns: repeat(1, 1fr);
      grid-template-rows: repeat(1, 6fr 1fr);
      box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
      /* height: 380px; */
    }
  
    #type {
      font-size: 1.5rem;
    }
    .input-container {
      display: flex;
      flex-direction: column;
    }
  
    .allInputs {
      border-bottom: solid rgba(0, 0, 0, 0.376) 1px;
      text-align: center;
      background-color: #e1e9f4;
      box-sizing: border-box;
      font-size: 2rem;
      padding: 1rem 0;
      font-weight: 600;
      color: #222;
    }
  
    input {
      font-size: 1.5rem;
    }
  
    .allInputs::placeholder {
      font-size: 1.4rem;
      width: 100%;
    }
  }
/* ... */

